--- a/index.html
+++ b/index.html
@@ -241,25 +241,7 @@
         <script src="js/common.js"></script>
 
         <!--IMPORTANDO O BOOTSTRAP JS e JQUERY-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-                crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"
-                integrity="sha384-THVO/sM0mFD9h7dfSndI6TS0PgAGavwKvB5hAxRRvc0o9cPLohB0wb/PTA7LdUHs"
-                crossorigin="anonymous"></script>
-        <script src='https://unpkg.com/pdfkit@0.12.3/js/pdfkit.js'></script>
-        <script>
-            $(function () {
-                $('[data-toggle="tooltip"]').tooltip()
-            })
-        </script>
-
-        <script>
-            function printSVG() {
-                window.print()
-            }
-        </script>
+       <script src="js/footer.js"></script>
 </body>
 
 </html>
