fiz um comentário

--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@
 
                 renderizaBorda() {
                     // geração por fronteira interna
-
+//marcelo esteve aqui
                     
                     let rangevalue2 = document.getElementById("range2").value;
                     var quantidadeNosBorda = Math.round(this.numeroDeNos * (rangevalue2 / 100));//pega o numero de nos e multiplica pela porcentagem do range value
